spacing fix

--- a/twitch/twitch_personal_layout.user.css
+++ b/twitch/twitch_personal_layout.user.css
@@ -163,7 +163,7 @@ url-prefix("https://dashboard.twitch.tv/")
     }
     .metadata-layout__secondary-button-spacing {
         margin-top: -15px !important;
-        margin-right: 0px !important;
+        margin-right: -5px !important;
     }
     /* 
         ## Stat Text ##
